# MealWorkout_runPython

./: DockerFile  Kentucky.py  McDonald.json  McDonald.py  Mos.py  TKK.py  app.py  burgerking.py  install_chrome.sh  pyproject.toml  漢堡王資料讀取.py
info_json/: McDonald.json  Mos.json  TKK.json  burger_final.json  kentucky.json
